src/test/deca/context/invalid/return/this_in_main_illegal.deca
// Description :
//    Utilisation de this dans le bloc principal.
//
// Resultats :
//    Erreur contextuelle
//    Ligne <No_de_ligne> : <message d'erreur de votre compilateur>

{
    this;
}

